--- a/client/.env.example
+++ b/client/.env.example
@@ -1,2 +1,4 @@
 REACT_APP_API_URL=http://localhost:5000
-REACT_APP_PAYMENT_PROVIDER_KEY=your_payment_key
+# No payment provider key needed for frontend. All M-Pesa keys are in the backend .env
+# REACT_APP_PAYMENT_PROVIDER_KEY=your_payment_key
+# Add any other frontend environment variables below
