--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,10 @@ MONGO_URI=your_mongodb_connection_string
 OPENAI_API_KEY=your_openai_api_key
 CLIENT_URL=http://localhost:3000
 PAYMENT_PROVIDER_KEY=your_payment_key
+
+# M-Pesa Daraja API
+MPESA_CONSUMER_KEY=your_key
+MPESA_CONSUMER_SECRET=your_secret
+MPESA_SHORTCODE=your_shortcode
+MPESA_PASSKEY=your_passkey
+MPESA_CALLBACK_URL=https://your-ngrok-url/mpesa/callback
