--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "cohere-ai": "^7.17.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
